--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,11 @@
         "rmrevin/yii2-fontawesome": "2.10.*",
         "kartik-v/yii2-widget-select2": "^2.1",
         "kartik-v/yii2-widget-activeform": "@dev",
-        "kartik-v/yii2-widget-alert": "*"
+        "kartik-v/yii2-widget-alert": "*",
+        "kartik-v/yii2-dialog": "*",
+        "kartik-v/yii2-mpdf": "@dev",
+        "kartik-v/yii2-widgets": "*",
+        "kartik-v/yii2-password": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
