--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "kartik-v/yii2-dialog": "*",
         "kartik-v/yii2-mpdf": "@dev",
         "kartik-v/yii2-widgets": "*",
-        "kartik-v/yii2-password": "@dev"
+        "kartik-v/yii2-password": "@dev",
+        "kartik-v/yii2-detail-view": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
