--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "kartik-v/yii2-widgets": "*",
         "kartik-v/yii2-password": "@dev",
         "kartik-v/yii2-detail-view": "*",
-        "dmstr/yii2-adminlte-asset": "^2.1"
+        "dmstr/yii2-adminlte-asset": "^2.1",
+        "kartik-v/yii2-date-range": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
