--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,9 @@
         "kartik-v/yii2-password": "@dev",
         "kartik-v/yii2-detail-view": "*",
         "dmstr/yii2-adminlte-asset": "^2.1",
-        "kartik-v/yii2-date-range": "*"
+        "kartik-v/yii2-date-range": "*",
+        "kartik-v/yii2-number": "*",
+        "yiisoft/yii2-jui": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
