--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.6",
-        "yiisoft/yii2-bootstrap": "~2.0.0",
+        "yiisoft/yii2-bootstrap": "~2.0.14",
         "yiisoft/yii2-bootstrap4": "1.0.x-dev",
         "bower-asset/bootstrap": "3.3.7 as 4.1.3",
         "npm-asset/bootstrap": "~4.1.3",
@@ -37,8 +37,8 @@
         "kartik-v/yii2-date-range": "*",
         "kartik-v/yii2-number": "*",
         "yiisoft/yii2-jui": "^2.0",
-        "kartik-v/yii2-icons": "^1.4@dev",
-        "kartik-v/yii2-bootstrap4-dropdown": "@dev"
+        "kartik-v/yii2-bootstrap4-dropdown": "@dev",
+        "kartik-v/yii2-icons": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
