--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "kartik-v/yii2-widget-activeform": "@dev",
         "kartik-v/yii2-widget-alert": "*",
         "kartik-v/yii2-dialog": "*",
-        "kartik-v/yii2-mpdf": "@dev",
+        "kartik-v/yii2-mpdf": "dev-master",
         "kartik-v/yii2-widgets": "*",
         "kartik-v/yii2-password": "@dev",
         "kartik-v/yii2-detail-view": "*",
@@ -39,7 +39,8 @@
         "yiisoft/yii2-jui": "^2.0",
         "kartik-v/yii2-bootstrap4-dropdown": "@dev",
         "kartik-v/yii2-icons": "@dev",
-        "kartik-v/yii2-widget-datepicker": "dev-master"
+        "kartik-v/yii2-widget-datepicker": "dev-master",
+        "dimmitri/yii2-expand-row-column": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
